--- a/src/component/weather.module.css
+++ b/src/component/weather.module.css
@@ -1,87 +1,147 @@
 .main {
-  background-color: rgba(0, 0, 0, 0.4);
-  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.235);
+  min-height: 100vh;
+  height: 100%;
+  position: relative;
 }
-
-.main:before {
+.main::before {
   content: "";
   position: absolute;
-  width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
+  width: 100%;
   z-index: -1;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
 }
-
 .search {
   display: flex;
-  justify-content: center;
-  padding: 20px;
+  justify-content: start;
+  width: 100%;
 }
-.search .input {
-  padding: 10px 20px;
+.search input {
+  max-width: 400px;
+  background-color: rgba(0, 0, 0, 0.313);
+  border: 1px;
+  height: 40px;
+  padding-left: 8px;
   border-radius: 10px;
-  border: 1px solid rgba(120, 119, 119, 0.587);
-  background-color: rgba(222, 220, 220, 0.345);
-  font-size: 16px;
 }
-.input::placeholder {
-  color: white;
-}
-.input:focus {
+.search input:focus {
   outline: none;
 }
-.continer {
-  max-width: 700px;
-  /* height: auto; */
-  /* display: flex; */
-  /* flex-direction: column;
-  justify-content: space-between; */
-  margin: auto;
+
+.search input::placeholder {
+  color: white;
 }
-.header {
+.container {
+  max-width: 700px;
+  height: 90vh;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 40px;
+  gap: 10px;
+}
+.weatherInfo {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.317);
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.cityDel {
+  display: flex;
+  flex-direction: column;
+}
+.logo {
   display: flex;
   align-items: center;
 }
-.header p {
-  font-size: 20px;
+.cityName {
+  margin-left: 20px;
+  margin-bottom: 10px;
 }
-.city {
-  font-size: 20px;
+.climate {
+  font-size: 12px;
 }
-.temp {
-  font-size: 50px;
-  margin: 10px;
+.weatherDel {
   display: flex;
-}
-.tempType {
-  font-size: 15px;
-}
-.tempType span {
-  cursor: pointer;
-}
-.unitActive {
-  background-color: rgba(53, 39, 39, 0.712);
-  padding: 5px;
-  border-radius: 5px;
-}
-.main .footer {
-  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: center;
   justify-content: space-between;
-  background-color: rgba(63, 62, 62, 0.377);
-  padding: 10px 20px;
+}
+.temp p {
+  font-size: 30px;
+  display: flex;
+  margin: 0px 20px;
+}
+.temp span {
+  color: rgba(255, 255, 255, 0.326);
+}
+.temp .opacity {
+  color: white;
+}
+.temp .unit {
+  font-size: 14px;
+}
+.weatherDiv {
+  background-color: rgba(0, 0, 0, 0.317);
+  width: 200px;
+  height: 80px;
   border-radius: 10px;
-  position: absolute;
-  bottom: 0;
-  min-width: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 5px;
 }
-.footer .title {
-  font-size: 25px;
-  margin-bottom: 3px;
+@media screen and (max-width: 500px) {
+  .weatherDel {
+    justify-content: center;
+  }
 }
-.footer .value {
-  font-size: 28px;
+@media screen and (max-height: 828px) and (max-width: 500px) {
+  .main {
+    min-height: 100%;
+  }
+  .container {
+    height: 100%;
+  }
+}
+.loaderAlign {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loader {
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #34dbd3;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
